# QtWidgetToPng

./: .gitignore  CMakeLists.txt  LICENSE  QArrowTabBar.cpp  QArrowTabBar.h  QtWidgetToPng.cpp  QtWidgetToPng.h  main.cpp  themes_generator.cpp  themes_generator.h
cmake/: PVS-Studio.cmake
